@@ -1,4 +1,5 @@
 1.0.0
+ * Fix bulk writer consistency level validations for blocked instances (CASSANDRA-19257)
  * Column type mapping error for timestamp type during bulk writes (CASSANDRA-19223)
  * Speed up integration tests (CASSANDRA-19251)
  * Make bulk writer resilient to cluster resize events (CASSANDRA-18852)
